Fix Alignment Issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -313,11 +313,6 @@ header > .container {
   background-repeat: no-repeat;
 }
 
-.branch-commit-wrapper.open .branch-commit::after {
-  top: 12px;
-  background-image: url("/icons/branch-partial.png");
-}
-
 .branch-commit-wrapper.open .branch-commit::before {
   content: "";
   position: absolute;
@@ -600,6 +595,10 @@ header > .container {
   line-height: 16px;
   font-size: 12px;
   color: #727272;
+}
+
+.branch-commit-wrapper.open .branch-commit-details .date-or-time {
+  padding-left: 30px;
 }
 
 .branch-commit-comments {
